added logout to all, adding contractor, contractors page, fixed pagination bug and other

--- a/src/templates/admin-securities-waiting.html
+++ b/src/templates/admin-securities-waiting.html
@@ -30,7 +30,11 @@
     <div class="search">
         <form method="get" action="{{base_url}}/admins/securities">
             <label>
-                <input type="search" placeholder="Поиск" name="substring">
+                {%if substring != None%}
+                <input placeholder="Поиск" type="search" name="substring" value="{{substring}}">
+            {%else%}
+                <input placeholder="Поиск" type="search" name="substring">
+            {%endif%}
             </label>
             <input type="hidden" name="pending" value="True">
             <button class="search_button"> Найти</button>
@@ -86,6 +90,8 @@
 
         </table>
     </div>
+    {%import 'logout_macro.html' as logout with context%}
+    {{logout.logout()}}
 
 </div>
 
