--- a/src/templates/admin-catalog-with-int-value.html
+++ b/src/templates/admin-catalog-with-int-value.html
@@ -26,9 +26,13 @@
     {{nav.nav(3)}}
 
     <div class="search">
-        <form method="get" action="{{base_url}}/admins/{{admin_id}}/catalogs/{{catalog_type}}">
+        <form method="get" action="{{base_url}}/admins/catalogs/{{catalog_type}}">
             <label>
-                <input type="search" placeholder="Поиск" name="substring">
+                {%if substring != None%}
+                <input placeholder="Поиск" type="search" name="substring" value="{{substring}}">
+            {%else%}
+                <input placeholder="Поиск" type="search" name="substring">
+            {%endif%}
             </label>
             <button class="search_button"> Найти</button>
         </form>
@@ -68,6 +72,9 @@
             {%endfor%}
         </table>
     </div>
+
+    {%import 'logout_macro.html' as logout with context%}
+    {{logout.logout()}}
 
 </div>
 
