--- a/src/templates/admin-operators-waiting.html
+++ b/src/templates/admin-operators-waiting.html
@@ -31,7 +31,11 @@
     <div class="search">
         <form method="get" action="{{base_url}}/admins/operators">
             <label>
-                <input type="search" placeholder="Поиск" name="substring">
+                {%if substring != None%}
+                <input placeholder="Поиск" type="search" name="substring" value="{{substring}}">
+            {%else%}
+                <input placeholder="Поиск" type="search" name="substring">
+            {%endif%}
             </label>
             <input type="hidden" name="pending" value="True">
             <button class="search_button"> Найти</button>
@@ -80,6 +84,9 @@
             {%endfor%}
         </table>
     </div>
+
+    {%import 'logout_macro.html' as logout with context%}
+    {{logout.logout()}}
 
 </div>
 
