--- a/src/templates/admin-simple-catalog.html
+++ b/src/templates/admin-simple-catalog.html
@@ -26,7 +26,11 @@
     <div class="search">
         <form method="get" action="{{base_url}}/admins/catalogs/{{catalog_type}}">
             <label>
-                <input type="search" placeholder="Поиск" name="substring">
+                {%if substring != None%}
+                <input placeholder="Поиск" type="search" name="substring" value="{{substring}}">
+            {%else%}
+                <input placeholder="Поиск" type="search" name="substring">
+            {%endif%}
             </label>
             <button class="search_button"> Найти</button>
         </form>
@@ -64,6 +68,8 @@
             {%endfor%}
         </table>
     </div>
+    {%import 'logout_macro.html' as logout with context%}
+    {{logout.logout()}}
 
 </div>
 
