--- a/src/static/admin.css
+++ b/src/static/admin.css
@@ -12,7 +12,7 @@ body {
 
 .grid-container {
     display: grid;
-    grid-template-columns: 18% 290px auto;
+    grid-template-columns: 18% 290px auto 140px;
     grid-template-rows: 150px 60px 60px auto;
     grid-column-gap: 2%;
 }
@@ -157,7 +157,7 @@ input[type="search"] {
 #table {
     border: 1px solid #7B7B7B;
     border-radius: 5px;
-    width: 85%;
+    width: 100%;
 }
 
 #table th {
@@ -204,6 +204,28 @@ input[type="search"] {
     background: none;
     color: #E45D65;
     font-size: 12px;
+    font-weight: 100;
+    cursor: pointer;
+    transition: box-shadow .4s ease;
+}
+
+.exit_wr {
+    grid-column: 4;
+    grid-row: 1;
+    font-size: 14px;
+    align-self: center;
+    justify-self: end;
+    padding-right: 70px;
+}
+
+.exit_button {
+    width: 70px;
+    height: 30px;
+    border-radius: 5px;
+    background: none;
+    border: 1px solid #8497FF;
+    color: #8497FF;
+    font-size: 14px;
     font-weight: 100;
     cursor: pointer;
     transition: box-shadow .4s ease;
