fixed bug with base url

--- a/src/templates/contractor.html
+++ b/src/templates/contractor.html
@@ -14,6 +14,8 @@
 <a href="{{contractor.inn_link}}">ссылка на инн</a>
 
 <h1>Договры</h1>
+<p>Добавить договор</p>
+
 {%for contract in contracts%}
 
 <a href="{{base_url}}/files/{{contract.uuid}}">ссылка на договор</a>
