--- a/src/templates/registration.html
+++ b/src/templates/registration.html
@@ -59,7 +59,7 @@
             })
         });
         if (res.status === 201) {
-            window.location = base_url
+            window.location = base_url + '/login'
         } else {
             data = await res.json();
             alert(data.detail)
