--- a/src/templates/operator-contractors.html
+++ b/src/templates/operator-contractors.html
@@ -13,9 +13,9 @@
 <div class="grid-container">
 
     <div class="sidebar">
-        <a class="active" href="operator_companies.html">
+        <a class="active" href="{{base_url}}/contractors">
             <img class="triangle" src="{{url_for('static',path='/triangle.png')}}">Контрагенты</a>
-        <a href="operator_requests.html">
+        <a href="{{base_url}}/operators/requests">
             <img class="triangle" src="{{url_for('static',path='/triangle.png')}}">Заявки</a>
     </div>
 
