--- a/src/static/representatives_requests.css
+++ b/src/static/representatives_requests.css
@@ -12,74 +12,73 @@ body {
 
 .grid-container {
     display: grid;
-    grid-template-columns: 18% auto auto 140px;
-    grid-template-rows: 150px auto auto auto 60px 60px auto auto;
+    grid-template-columns: 20% 290px auto 140px;
+    grid-template-rows: 150px 60px 60px auto;
     grid-column-gap: 2%;
 }
 
-h2 {
-    font-weight: 500;
-    font-size: 1.5em;
+.sidebar {
+    grid-column: 1;
+    grid-row: 2/4;
+    font-size: 20px;
 }
 
-h3 {
-    font-weight: 500;
-    font-size: 1.2em;
-    margin-bottom: 0;
+.sidebar a {
+    display: block;
+    color: #3D8AFF;
+    padding: 20px;
+    text-decoration: none;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
 }
 
-.company_head_wr {
-    grid-column: 2;
+.sidebar a.active {
+    background-color: #f1f1f1;
+    color: black;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
+
+.sidebar a:hover:not(.active) {
+    background-color: #f1f1f1;
+    color: black;
+}
+
+.triangle {
+    margin-left: 40%;
+    margin-right: 7%;
+    width: 10px;
+    height: 15px;
+}
+
+.topbar {
+    grid-column: 2/4;
     grid-row: 1;
+    font-size: 16px;
     align-self: center;
 }
 
-.company_info_wr {
-    grid-column: 2;
-    grid-row: 2;
+.topbar a {
+    color: #3D8AFF;
+    padding: 15px;
+    text-decoration: none;
+    border-radius: 10px;
 }
 
-.contacts_head_wr {
-    grid-column: 3;
-    grid-row: 1;
-    align-self: center;
+.topbar a.active {
+    background-color: #f1f1f1;
+    color: black;
+    border-radius: 10px;
 }
 
-.contacts_info_wr {
-    grid-column: 3;
-    grid-row: 2/8;
-}
-
-.doc_head_wr {
-    grid-column: 2;
-    grid-row: 3;
-}
-
-.doc_info_wr {
-    grid-column: 2;
-    grid-row: 4;
-}
-
-.info {
-    margin-bottom: 50px;
-}
-
-input[type="file"] {
-    display: none;
-}
-
-.custom_upload {
-    border-radius: 5px;
-    border: 1px solid #ccc;
-    display: inline-block;
-    margin-left: 6px;
-    padding: 6px 6px;
-    cursor: pointer;
+.topbar a:hover:not(.active) {
+    background-color: #f1f1f1;
+    color: black;
 }
 
 .search {
     grid-column: 2;
-    grid-row: 5;
+    grid-row: 2;
     align-self: center;
 }
 
@@ -112,10 +111,9 @@ input[type="search"] {
 }
 
 .add_wr {
-    grid-column: 2;
-    grid-row: 5;
+    grid-column: 3;
+    grid-row: 2;
     align-self: center;
-    margin-left: 320px;
 }
 
 .add_button {
@@ -133,7 +131,7 @@ input[type="search"] {
 
 .pagination {
     grid-column: 2;
-    grid-row: 6;
+    grid-row: 3;
     align-self: center;
 }
 
@@ -149,14 +147,14 @@ input[type="search"] {
 }
 
 .table-wr {
-    grid-column: 2;
-    grid-row: 7;
+    grid-column: 2/5;
+    grid-row: 4;
     font-size: 14px;
     padding-top: 20px;
     padding-bottom: 40px;
 }
 
-#table{
+#table {
     border: 1px solid #7B7B7B;
     border-radius: 5px;
     width: 85%;
@@ -173,6 +171,10 @@ input[type="search"] {
     padding: 5px 5px 5px 8px;
 }
 
+.over td {
+    background-color: #FFC0C0;
+}
+
 #table tr:nth-child(even) {
     background-color: #f2f2f2;
 }
@@ -185,27 +187,6 @@ input[type="search"] {
     text-align: left;
     background-color: #DEDEDE;
     color: #454545;
-}
-
-.back_wr {
-    grid-column: 2;
-    grid-row: 8;
-    align-self: center;
-    padding-bottom: 70px;
-}
-
-.back_button {
-    height: 40px;
-    padding-left: 20px;
-    padding-right: 20px;
-    border-radius: 5px;
-    background: #8497FF;
-    border: none;
-    color: white;
-    font-size: 14px;
-    font-weight: 100;
-    cursor: pointer;
-    transition: box-shadow .4s ease;
 }
 
 .exit_wr {
@@ -230,8 +211,9 @@ input[type="search"] {
     transition: box-shadow .4s ease;
 }
 
-.blue_button {
+.check_button {
     height: 20px;
+    margin-left: 5px;
     border-radius: 5px;
     border: 1px solid #8497FF;
     background: none;
