added all representative screens and other the shitest code ever

--- a/src/static/representatives_requests_view.css
+++ b/src/static/representatives_requests_view.css
@@ -12,21 +12,36 @@ body {
 
 .grid-container {
     display: grid;
-    grid-template-columns: 10% minmax(min-content, max-content) auto 140px;
+    grid-template-columns: 20% 290px auto 140px;
     grid-template-rows: 150px 60px 60px auto;
     grid-column-gap: 2%;
 }
 
-.agent_contract_wr {
-    grid-column: 2;
-    grid-row: 1;
-    align-self: center;
+.sidebar {
+    grid-column: 1;
+    grid-row: 2/4;
+    font-size: 20px;
 }
 
-.object_workers_wr {
-    grid-column: 3;
-    grid-row: 1;
-    padding-top: 32px;
+.sidebar a {
+    display: block;
+    color: #3D8AFF;
+    padding: 20px;
+    text-decoration: none;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
+
+.sidebar a.active {
+    background-color: #f1f1f1;
+    color: black;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
+
+.sidebar a:hover:not(.active) {
+    background-color: #f1f1f1;
+    color: black;
 }
 
 .triangle {
@@ -34,6 +49,31 @@ body {
     margin-right: 7%;
     width: 10px;
     height: 15px;
+}
+
+.topbar {
+    grid-column: 2/4;
+    grid-row: 1;
+    font-size: 16px;
+    align-self: center;
+}
+
+.topbar a {
+    color: #3D8AFF;
+    padding: 15px;
+    text-decoration: none;
+    border-radius: 10px;
+}
+
+.topbar a.active {
+    background-color: #f1f1f1;
+    color: black;
+    border-radius: 10px;
+}
+
+.topbar a:hover:not(.active) {
+    background-color: #f1f1f1;
+    color: black;
 }
 
 .search {
@@ -70,40 +110,17 @@ input[type="search"] {
     transition: box-shadow .4s ease;
 }
 
-.result_wr {
-    grid-column: 2/4;
-    grid-row: 2;
-    align-self: center;
-    margin-left: 320px;
-}
-
-.back_wr {
+.add_wr {
     grid-column: 3;
     grid-row: 2;
     align-self: center;
-    justify-self: end;
 }
 
-.green_button {
+.add_button {
+    width: 170px;
     height: 40px;
-    padding-left: 20px;
-    padding-right: 20px;
     border-radius: 5px;
     background: #60B963;
-    border: none;
-    color: white;
-    font-size: 14px;
-    font-weight: 100;
-    cursor: pointer;
-    transition: box-shadow .4s ease;
-}
-
-.blue_button {
-    height: 40px;
-    padding-left: 20px;
-    padding-right: 20px;
-    border-radius: 5px;
-    background: #8497FF;
     border: none;
     color: white;
     font-size: 14px;
@@ -130,7 +147,7 @@ input[type="search"] {
 }
 
 .table-wr {
-    grid-column: 2/4;
+    grid-column: 2/5;
     grid-row: 4;
     font-size: 14px;
     padding-top: 20px;
@@ -140,7 +157,7 @@ input[type="search"] {
 #table {
     border: 1px solid #7B7B7B;
     border-radius: 5px;
-    width: 100%;
+    width: 85%;
 }
 
 #table th {
@@ -158,14 +175,6 @@ input[type="search"] {
     background-color: #FFC0C0;
 }
 
-.denied td {
-    background-color: #FFC0C0;
-}
-
-.allowed td {
-    background-color: #CAE9C8;
-}
-
 #table tr:nth-child(even) {
     background-color: #f2f2f2;
 }
@@ -178,44 +187,6 @@ input[type="search"] {
     text-align: left;
     background-color: #DEDEDE;
     color: #454545;
-}
-
-.allow_button {
-    height: 20px;
-    border-radius: 5px;
-    border: 1px solid #03BF38;
-    background: none;
-    color: #03BF38;
-    font-size: 12px;
-    font-weight: 100;
-    cursor: pointer;
-    transition: box-shadow .4s ease;
-}
-
-.deny_button {
-    height: 20px;
-    margin-left: 5px;
-    border-radius: 5px;
-    border: 1px solid #E45D65;
-    background: none;
-    color: #E45D65;
-    font-size: 12px;
-    font-weight: 100;
-    cursor: pointer;
-    transition: box-shadow .4s ease;
-}
-
-.check_button {
-    height: 20px;
-    margin-left: 5px;
-    border-radius: 5px;
-    border: 1px solid #8497FF;
-    background: none;
-    color: #8497FF;
-    font-size: 12px;
-    font-weight: 100;
-    cursor: pointer;
-    transition: box-shadow .4s ease;
 }
 
 .exit_wr {
@@ -235,6 +206,19 @@ input[type="search"] {
     border: 1px solid #8497FF;
     color: #8497FF;
     font-size: 14px;
+    font-weight: 100;
+    cursor: pointer;
+    transition: box-shadow .4s ease;
+}
+
+.check_button {
+    height: 20px;
+    margin-left: 5px;
+    border-radius: 5px;
+    border: 1px solid #8497FF;
+    background: none;
+    color: #8497FF;
+    font-size: 12px;
     font-weight: 100;
     cursor: pointer;
     transition: box-shadow .4s ease;
