--- a/src/templates/operator-representative-add-form.html
+++ b/src/templates/operator-representative-add-form.html
@@ -65,7 +65,7 @@
             alert('Данные введены некоректно');
             return;
         }
-        const response = await fetch(base_url + '/representatives/', {
+        const response = await fetch(base_url + '/contractor_representatives/', {
             method: 'post',
             headers: {
                 'Accept': 'application/json',
