--- a/src/static/request_add_form.css
+++ b/src/static/request_add_form.css
@@ -39,61 +39,40 @@ body {
     position: relative;
     margin: 0 auto;
     background: #f5f5f5;
-    width: 900px;
+    max-width: 350px;
     border-radius: 10px;
     padding: 20px;
 }
 
 #add_form h2 {
-    text-align: left;
+    text-align: center;
     font-weight: 500;
-    font-size: 1.6em;
-    padding-left: 40px;
+    font-size: 1.5em;
     margin-top: 30px;
     color: #414141;
 }
 
 #add_form h3 {
     text-align: left;
+    padding-left: 40px;
     margin-top: 10px;
     font-weight: 500;
     font-size: 1.2em;
     color: #414141;
 }
 
-#add_form p {
-    text-align: left;
-    color: #414141;
-}
-
 #add_form .form {
     padding-top: 20px;
-    padding-left: 40px;
-    text-align: left;
+    text-align: center;
 }
 
-#add_form input[type="text"],
-input[type="date"],
 select {
-    width: 30%;
+    width: 80%;
     margin-bottom: 20px;
     height: 40px;
     border-radius: 5px;
     outline: 0;
     -moz-outline-style: none;
-}
-
-#add_form input[type="text"] {
-    border: 1px solid #ccc;
-    padding: 0 0 0 10px;
-    text-transform: capitalize;
-    font-size: 14px;
-}
-
-input[type="date"] {
-    border: 1px solid #ccc;
-    padding: 0 0 0 10px;
-    font-size: 14px;
 }
 
 #add_form select {
@@ -102,29 +81,8 @@ input[type="date"] {
     font-size: 14px;
 }
 
-.docs_wr {
-    display: flex;
-}
-
-.column {
-    flex: 50%;
-}
-
-input[type="file"] {
-    display: none;
-}
-
-.custom_upload {
-    border-radius: 5px;
-    border: 1px solid #ccc;
-    display: inline-block;
-    margin-left: 6px;
-    padding: 6px 6px;
-    cursor: pointer;
-}
-
 #add_form .add_button {
-    width: 120px;
+    width: 40%;
     margin-right: 10px;
     margin-top: 20px;
     margin-bottom: 30px;
@@ -140,7 +98,7 @@ input[type="file"] {
 }
 
 #add_form .back_button {
-    width: 90px;
+    width: 30%;
     margin-top: 20px;
     margin-bottom: 30px;
     height: 45px;
