--- a/src/templates/representatives_workers.html
+++ b/src/templates/representatives_workers.html
@@ -27,7 +27,8 @@
     </form>
 
     <div class="add_wr">
-        <button class="add_button"> + Добавить</button>
+        <button onclick="window.location.replace('{{base_url}}/contractor_representatives/add_worker')"
+        class="add_button"> + Добавить</button>
     </div>
 
     <div class="pagination">
@@ -56,7 +57,7 @@
                 {{worker.first_name}} {{worker
                     .patronymic}}</a></td>
                 <td>{{worker.profession}}</td>
-                <td>{{worker.vioalation_points}}</td>
+                <td>{{worker.violations_points}}</td>
             </tr>
             {%endfor%}
         </table>
